# wireguard-proxy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/wireguard_proxy/: __init__.py  cli.py  config.py  gate.py  proxy.py
tests/: test_config.py  test_proxy.py
