[tool.poetry]
name = "wireguard-proxy"
version = "0.1.0"
description = "UDP proxy server for WireGuard connections through CGNAT"
readme = "README.md"
license = "MIT"
packages = [{ include = "wireguard_proxy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.scripts]
wireguard-proxy = "wireguard_proxy.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
